--- a/client/mainWindow.css
+++ b/client/mainWindow.css
@@ -1,6 +1,71 @@
+body {
+    background-image: url('res/background_700x700.jpg');
+}
+
 .center_div {
     margin: auto;
-    width: 20%;
-    border: 5px solid #fff;
+    width: 90%;
+    height: 100%;
+    /* border: 5px solid #fff; */
     padding: 10px;
+}
+
+#title_div{
+    display: flex;
+    justify-content: center;
+}
+
+#wrapper_buttons {
+    width: 90%;
+    border: 1px solid black;
+    overflow: hidden; /* will contain if #first is longer than #second */
+}
+#first_button {
+    width: 50%;
+    float:left; /* add this */
+    border: 1px solid red;
+}
+#second_button {
+    border: 1px solid green;
+    overflow: hidden; /* if you don't want #second to wrap below #first */
+}
+
+#wrapper_info {
+    width: 90%;
+    border: 1px solid black;
+    overflow: hidden; /* will contain if #first is longer than #second */
+}
+#device_info {
+    width: 50%;
+    float:left; /* add this */
+    border: 1px solid red;
+}
+#device_status {
+    border: 1px solid green;
+    overflow: hidden; /* if you don't want #second to wrap below #first */
+}
+
+.myButton {
+	box-shadow: 3px 4px 0px 0px #1564ad;
+	background:linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
+	background-color:#79bbff;
+	border-radius:5px;
+	border:1px solid #337bc4;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	font-weight:bold;
+	padding:12px 44px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #528ecc;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
+	background-color:#378de5;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
 }
