--- a/client/scanFileWindow.css
+++ b/client/scanFileWindow.css
@@ -1,31 +1,58 @@
+body {
+    background-image: url('res/scan_background_500x400.jpg');
+}
+
 .center_div {
-    margin: auto;
-    width: 20%;
-    border: 5px solid #fff;
-    padding: 10px;
+    margin: 20px;
+    width: 80%;
+    /* border: 5px solid #fff; */
+    padding: 20px;
+}
+
+#input_div {
+    display: flex;
+    justify-content: center;
+    border: 20px;
+}
+
+#wrapper_buttons {
+    width: 90%;
+    /* border: 1px solid black; */
+    overflow: hidden; /* will contain if #first is longer than #second */
+}
+#first_button {
+    width: 50%;
+    float:left; /* add this */
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: center;
+}
+#second_button {
+    /* border: 1px solid green; */
+    display: flex;
+    justify-content: center;
+    overflow: hidden; /* if you don't want #second to wrap below #first */
 }
 
 .myButton {
-	box-shadow: 3px 4px 0px 0px #1564ad;
-	background:linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
-	background-color:#79bbff;
-	border-radius:5px;
-	border:1px solid #337bc4;
+	box-shadow:inset 0px 34px 0px -15px #b54b3a;
+	background-color:#a73f2d;
+	border:1px solid #241d13;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
-	font-size:17px;
+	font-size:15px;
 	font-weight:bold;
-	padding:12px 44px;
+	padding:9px 23px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #528ecc;
+	text-shadow:0px -1px 0px #7a2a1d;
 }
 .myButton:hover {
-	background:linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
-	background-color:#378de5;
+	background-color:#b34332;
 }
 .myButton:active {
 	position:relative;
 	top:1px;
 }
+
